; ModuleID = '/home/carl/AnghaBench/esp-idf/components/openssl/platform/extr_ssl_pm.c_pkey_pm_new.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/openssl/platform/extr_ssl_pm.c_pkey_pm_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.pkey_pm* }
%struct.pkey_pm = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pkey_pm_new(%struct.TYPE_4__* %0, %struct.TYPE_4__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca %struct.pkey_pm*, align 8
  %7 = alloca %struct.pkey_pm*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %5, align 8
  %8 = call %struct.pkey_pm* @ssl_mem_zalloc(i32 8)
  store %struct.pkey_pm* %8, %struct.pkey_pm** %6, align 8
  %9 = load %struct.pkey_pm*, %struct.pkey_pm** %6, align 8
  %10 = icmp ne %struct.pkey_pm* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %28

12:                                               ; preds = %2
  %13 = load %struct.pkey_pm*, %struct.pkey_pm** %6, align 8
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  store %struct.pkey_pm* %13, %struct.pkey_pm** %15, align 8
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %17 = icmp ne %struct.TYPE_4__* %16, null
  br i1 %17, label %18, label %27

18:                                               ; preds = %12
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load %struct.pkey_pm*, %struct.pkey_pm** %20, align 8
  store %struct.pkey_pm* %21, %struct.pkey_pm** %7, align 8
  %22 = load %struct.pkey_pm*, %struct.pkey_pm** %7, align 8
  %23 = getelementptr inbounds %struct.pkey_pm, %struct.pkey_pm* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.pkey_pm*, %struct.pkey_pm** %6, align 8
  %26 = getelementptr inbounds %struct.pkey_pm, %struct.pkey_pm* %25, i32 0, i32 1
  store i32 %24, i32* %26, align 4
  br label %27

27:                                               ; preds = %18, %12
  store i32 0, i32* %3, align 4
  br label %28

28:                                               ; preds = %27, %11
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local %struct.pkey_pm* @ssl_mem_zalloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
